--- a/View/log_window.ui
+++ b/View/log_window.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>375</width>
+    <height>450</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>800</width>
-    <height>600</height>
+    <width>375</width>
+    <height>450</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>800</width>
-    <height>600</height>
+    <width>375</width>
+    <height>450</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -31,8 +31,8 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>800</width>
-      <height>600</height>
+      <width>400</width>
+      <height>450</height>
      </rect>
     </property>
     <property name="focusPolicy">
@@ -59,10 +59,10 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>10</y>
-       <width>100</width>
-       <height>15</height>
+       <x>300</x>
+       <y>430</y>
+       <width>70</width>
+       <height>12</height>
       </rect>
      </property>
      <property name="maximumSize">
@@ -119,10 +119,10 @@
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>250</x>
-       <y>-30</y>
-       <width>983</width>
-       <height>982</height>
+       <x>5</x>
+       <y>5</y>
+       <width>80</width>
+       <height>80</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -141,16 +141,16 @@
     <widget class="QLabel" name="Label_bienvenida">
      <property name="geometry">
       <rect>
-       <x>-1</x>
-       <y>220</y>
-       <width>801</width>
-       <height>56</height>
+       <x>0</x>
+       <y>140</y>
+       <width>375</width>
+       <height>55</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Roboto Black</family>
-       <pointsize>38</pointsize>
+       <pointsize>20</pointsize>
        <weight>7</weight>
        <italic>false</italic>
        <bold>false</bold>
@@ -162,13 +162,13 @@
      <property name="styleSheet">
       <string notr="true">background-color: transparent;
 color: rgb(255, 255, 255);
-font: 57 38pt &quot;Roboto Black&quot;;
+font: 57 20pt &quot;Roboto Black&quot;;
 
 
 </string>
      </property>
      <property name="text">
-      <string>Bienvenido &quot;Usuario&quot;!</string>
+      <string>Bienvenido/a &quot;Usuario&quot;!</string>
      </property>
      <property name="scaledContents">
       <bool>false</bool>
@@ -180,10 +180,10 @@ font: 57 38pt &quot;Roboto Black&quot;;
     <widget class="QLineEdit" name="pass_in">
      <property name="geometry">
       <rect>
-       <x>262</x>
-       <y>320</y>
-       <width>261</width>
-       <height>31</height>
+       <x>85</x>
+       <y>255</y>
+       <width>250</width>
+       <height>30</height>
       </rect>
      </property>
      <property name="sizePolicy">
@@ -192,8 +192,11 @@ font: 57 38pt &quot;Roboto Black&quot;;
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="focusPolicy">
+      <enum>Qt::ClickFocus</enum>
+     </property>
      <property name="styleSheet">
-      <string notr="true">font: 12pt &quot;Roboto Light&quot;;
+      <string notr="true">font: 11pt &quot;Roboto Light&quot;;
 background-color: rgb(255, 255, 255);
 border-color: rgb(2, 31, 84);
 border-style: solid;
@@ -225,8 +228,8 @@ border-radius: 6px;</string>
     <widget class="QPushButton" name="btn_ingreso_login">
      <property name="geometry">
       <rect>
-       <x>350</x>
-       <y>390</y>
+       <x>240</x>
+       <y>335</y>
        <width>90</width>
        <height>25</height>
       </rect>
@@ -247,10 +250,10 @@ background-color: qlineargradient(spread:pad, x1:0.465, y1:0.397727, x2:0.863, y
     <widget class="QLineEdit" name="user_in">
      <property name="geometry">
       <rect>
-       <x>262</x>
-       <y>270</y>
-       <width>261</width>
-       <height>31</height>
+       <x>85</x>
+       <y>205</y>
+       <width>250</width>
+       <height>30</height>
       </rect>
      </property>
      <property name="sizePolicy">
@@ -259,8 +262,11 @@ background-color: qlineargradient(spread:pad, x1:0.465, y1:0.397727, x2:0.863, y
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="focusPolicy">
+      <enum>Qt::ClickFocus</enum>
+     </property>
      <property name="styleSheet">
-      <string notr="true">font: 12pt &quot;Roboto Light&quot;;
+      <string notr="true">font: 11pt &quot;Roboto Light&quot;;
 background-color: rgb(255, 255, 255);
 border-color: rgb(2, 31, 84);
 border-style: solid;
@@ -274,7 +280,7 @@ border-radius: 6px;</string>
       <string/>
      </property>
      <property name="maxLength">
-      <number>20</number>
+      <number>15</number>
      </property>
      <property name="frame">
       <bool>true</bool>
@@ -286,7 +292,84 @@ border-radius: 6px;</string>
       <set>Qt::AlignCenter</set>
      </property>
      <property name="placeholderText">
-      <string>Ingresa tu Nombre</string>
+      <string>Ingresa tu nombre</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_3">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>200</y>
+       <width>35</width>
+       <height>35</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: transparent;</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap>icon_img/icons8-customer-50.png</pixmap>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
+     </property>
+     <property name="indent">
+      <number>0</number>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_4">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>250</y>
+       <width>35</width>
+       <height>35</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: transparent;</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap>icon_img/icons8-lock-50.png</pixmap>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
+     </property>
+     <property name="indent">
+      <number>0</number>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_error_ingreso">
+     <property name="geometry">
+      <rect>
+       <x>85</x>
+       <y>295</y>
+       <width>250</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: transparent;
+font: 25 10pt &quot;Roboto Light&quot;;
+color: rgb(255, 103, 104);</string>
+     </property>
+     <property name="text">
+      <string>* Nombre y/o contraseña incorrectos</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+     <property name="wordWrap">
+      <bool>false</bool>
+     </property>
+     <property name="indent">
+      <number>0</number>
      </property>
     </widget>
     <zorder>label_2</zorder>
@@ -295,6 +378,9 @@ border-radius: 6px;</string>
     <zorder>Label_bienvenida</zorder>
     <zorder>pass_in</zorder>
     <zorder>btn_ingreso_login</zorder>
+    <zorder>label_3</zorder>
+    <zorder>label_4</zorder>
+    <zorder>label_error_ingreso</zorder>
    </widget>
   </widget>
  </widget>
