--- a/View/agregar_cuenta_indi.ui
+++ b/View/agregar_cuenta_indi.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Ingreso de cuenta</string>
   </property>
   <widget class="QFrame" name="frame">
    <property name="geometry">
@@ -290,6 +290,9 @@ border-radius: 6px;</string>
        <width>81</width>
        <height>25</height>
       </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: #6b778d;
