--- a/View/log_window.ui
+++ b/View/log_window.ui
@@ -142,7 +142,7 @@
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>140</y>
+       <y>130</y>
        <width>375</width>
        <height>55</height>
       </rect>
@@ -196,12 +196,11 @@ font: 57 20pt &quot;Roboto Black&quot;;
       <enum>Qt::ClickFocus</enum>
      </property>
      <property name="styleSheet">
-      <string notr="true">font: 11pt &quot;Roboto Light&quot;;
-background-color: rgb(255, 255, 255);
-border-color: rgb(2, 31, 84);
-border-style: solid;
-border-width: 2px;
-border-radius: 6px;</string>
+      <string notr="true">font: 12pt &quot;Roboto&quot;;
+background-color: transparent;
+border-bottom: 1px white;
+color: white;
+border-style: solid;</string>
      </property>
      <property name="inputMethodHints">
       <set>Qt::ImhHiddenText|Qt::ImhNoAutoUppercase|Qt::ImhNoPredictiveText|Qt::ImhSensitiveData</set>
@@ -266,12 +265,11 @@ background-color: qlineargradient(spread:pad, x1:0.465, y1:0.397727, x2:0.863, y
       <enum>Qt::ClickFocus</enum>
      </property>
      <property name="styleSheet">
-      <string notr="true">font: 11pt &quot;Roboto Light&quot;;
-background-color: rgb(255, 255, 255);
-border-color: rgb(2, 31, 84);
-border-style: solid;
-border-width: 2px;
-border-radius: 6px;</string>
+      <string notr="true">font: 12pt &quot;Roboto&quot;;
+background-color: transparent;
+border-bottom: 1px white;
+color: white;
+border-style: solid;</string>
      </property>
      <property name="inputMethodHints">
       <set>Qt::ImhNone</set>
